--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,18 +1,13 @@
 {
   "name": "Django Development Environment",
-  "dockerComposeFile": "../docker-compose.yml",
-  "service": "web",
-  "workspaceFolder": "/app",
+  "dockerFile": "Dockerfile",
+  "context": "..",
+  "appPort": [8000],
   "extensions": [
-    "ms-python.python",
-    "ms-azuretools.vscode-docker"
+    "ms-python.python"
   ],
   "settings": {
-    "python.pythonPath": "/usr/local/bin/python3",
     "terminal.integrated.shell.linux": "/bin/bash"
   },
-  "postCreateCommand": "python3 manage.py migrate",
-  "appPort": [8000],
-  "forwardPorts": [8000],
-  "remoteUser": "vscode"
+  "postCreateCommand": "python manage.py migrate"
 }
